[package]
name = "in_memory_trading_sys_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.83.0"
install = "0.0.0"
ulid = "0.3.3"
crossbeam = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.140"
dashmap = "7.0.0-rc2"